--- a/css/main.css
+++ b/css/main.css
@@ -156,8 +156,7 @@ p {
   color: #131313; }
 
 strong {
-  font-family: "Roboto-Bold", sans-serif;
-  font-style: normal;
+  font-family: "MazzardH-Bold", sans-serif;
   font-weight: bold; }
 
 .container {
@@ -165,6 +164,9 @@ strong {
   width: 100%;
   margin: 0 auto;
   padding: 0 15px; }
+
+#wrapper-content {
+  min-height: calc(100vh - 199px - 50px); }
 
 .header {
   padding: 55px 0 45px;
@@ -378,6 +380,17 @@ strong {
     -webkit-line-clamp: 3;
     height: calc(1em * 1.33 * 3); } }
 
+.text {
+  font-family: "MazzardH-Regular", sans-serif;
+  font-size: 20px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.4;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff; }
+
 .title-v1 {
   font-family: "MazzardH-SemiBold", sans-serif;
   font-size: 24px;
@@ -412,6 +425,13 @@ strong {
   font-weight: bold;
   line-height: 1.25;
   color: #000000; }
+
+.title-v5 {
+  font-family: "MazzardH-Light", sans-serif;
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 1.36;
+  color: #9b1e23; }
 
 .row-between {
   display: -webkit-box;
@@ -754,6 +774,170 @@ strong {
   bottom: 57px;
   right: 352px; }
 
+.accordion {
+  margin-top: 25px; }
+  .accordion-list {
+    border-bottom: 1px solid #ececec; }
+  .accordion-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+    padding: 22px 30px 22px 0;
+    cursor: pointer; }
+    .accordion-item img {
+      width: 30px;
+      height: 30px;
+      margin-right: 15px; }
+    .accordion-item:before {
+      content: '';
+      position: absolute;
+      right: 0;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+              transform: translateY(-50%);
+      background: url("../img/down.svg") no-repeat center/contain;
+      width: 22px;
+      height: 22px;
+      -webkit-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+    .accordion-item.active:before {
+      -webkit-transform: translateY(-50%) scale(1, -1);
+              transform: translateY(-50%) scale(1, -1); }
+  .accordion__content {
+    padding: 10px 0 20px;
+    display: none; }
+    .accordion__content li a {
+      font-size: 16px;
+      line-height: 2.25;
+      color: #200a0b;
+      border-bottom: 1px dashed transparent;
+      -webkit-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+      .accordion__content li a:hover {
+        color: #9b1e23;
+        border-bottom: 1px dashed #9b1e23; }
+
+.region {
+  padding: 55px 0 44px; }
+
+.pop-first {
+  background-color: #9b1e22;
+  padding: 36px 0 55px; }
+  .pop-first .title-v2 {
+    text-align: center;
+    color: #fff;
+    margin: 37px 0 20px; }
+
+.pop-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .pop-row svg {
+    margin-right: 20px; }
+  .pop-row p {
+    font-family: "MazzardH-Regular", sans-serif;
+    font-weight: normal;
+    line-height: 1;
+    color: #ffffff; }
+
+.pop-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 50px; }
+  .pop-flex p {
+    line-height: 1.67; }
+
+p.pop__date {
+  font-family: "MazzardH-Regular", sans-serif;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 2;
+  color: #000000;
+  margin-bottom: 19px; }
+
+.pop-avatar {
+  width: 195px;
+  height: 195px;
+  margin-right: 40px;
+  border-radius: 50%; }
+
+.property {
+  padding: 50px 0 37px; }
+  .property ul {
+    padding-top: 10px; }
+
+.property-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 18px 0;
+  border-bottom: 1px solid #ebedf0; }
+  .property-item img {
+    width: 35px;
+    height: 36px;
+    margin-right: 30px;
+    -ms-flex-negative: 0;
+        flex-shrink: 0; }
+
+.articles {
+  padding: 60px 0 45px; }
+
+.list-article li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 30px; }
+
+.article__content {
+  padding: 20px 0; }
+
+.article-img {
+  width: 263px;
+  min-height: 180px;
+  margin-right: 30px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -o-object-fit: cover;
+     object-fit: cover; }
+
+.article-title {
+  font-family: "MazzardH-Bold", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1.2;
+  color: #9b1e23;
+  margin: 20px 0 9px; }
+
+.article-text {
+  font-size: 16px;
+  line-height: 1.5; }
+
+.mt-0 {
+  margin-top: 0; }
+
+.py-5 {
+  padding: 50px 0; }
+
+.pb-6 {
+  padding-bottom: 60px; }
+
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (min-width: 992px) and (max-width: 1169px) {
@@ -935,8 +1119,10 @@ strong {
   .title-v3 {
     font-size: 36px;
     line-height: 1; }
-  p {
+  p, p.pop__date {
     font-size: 14px; }
+  .text {
+    font-size: 16px; }
   .profile-span {
     font-size: 13px; }
   .profile {
@@ -945,7 +1131,43 @@ strong {
     width: calc(50% - 15px);
     margin: 35px 30px 0 0; }
   .news-item:nth-child(2n+2) {
-    margin-right: 0; } }
+    margin-right: 0; }
+  .accordion-item {
+    padding: 15px 15px 15px 0; }
+  .accordion-item:before {
+    width: 15px;
+    height: 15px; }
+  .accordion-item img {
+    width: 20px;
+    height: 20px; }
+  .title-v5 {
+    font-size: 18px;
+    line-height: 1.1; }
+  .accordion__content li a {
+    font-size: 14px;
+    line-height: 2; }
+  .pop-first .title-v2 {
+    margin: 30px 0 20px; }
+  .pop-row svg {
+    margin-right: 15px; }
+  .property-item img {
+    margin-right: 20px;
+    width: 30px;
+    height: 31px; }
+  .list-article {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+  .list-article li {
+    display: block;
+    width: calc(50% - 15px);
+    margin: 0 30px 20px 0; }
+    .list-article li:nth-child(2n+2) {
+      margin-right: 0; }
+  .article-img {
+    width: 100%; } }
 
 @media only screen and (max-width: 600px) {
   .profile-avatar {
@@ -975,7 +1197,18 @@ strong {
     margin: 30px 0 0 0; }
   .points-item {
     width: 100%;
-    margin: 0 0 15px; } }
+    margin: 0 0 15px; }
+  .pop-flex {
+    display: block; }
+  .pop-avatar {
+    margin: 0 0 30px 0; }
+  .news-img {
+    height: 56vw; }
+  .article-img {
+    min-height: 56vw; }
+  .list-article li {
+    width: 100%;
+    margin: 0 0 20px 0; } }
 
 @media only screen and (max-width: 480px) {
   .header .row {
