--- a/sass/main.sass
+++ b/sass/main.sass
@@ -133,8 +133,7 @@ p
   color: #131313
 
 strong
-  font-family: "Roboto-Bold", sans-serif
-  font-style: normal
+  font-family: "MazzardH-Bold", sans-serif
   font-weight: bold
 
 .container
@@ -143,6 +142,8 @@ strong
   margin: 0 auto
   padding: 0 15px
 
+#wrapper-content
+  min-height: calc(100vh - 199px - 50px)
 .header
   padding: 55px 0 45px
   box-shadow: 0 0 30px 0 rgba(176, 141, 81, 0.15)
@@ -324,6 +325,17 @@ strong
     -webkit-line-clamp: 3
     height: calc(1em * 1.33 * 3)
 
+.text
+  font-family: "MazzardH-Regular", sans-serif
+  font-size: 20px
+  font-weight: normal
+  font-stretch: normal
+  font-style: normal
+  line-height: 1.4
+  letter-spacing: normal
+  text-align: center
+  color: #ffffff
+
 .title-v1
   font-family: "MazzardH-SemiBold", sans-serif
   font-size: 24px
@@ -359,7 +371,24 @@ strong
   line-height: 1.25
   color: #000000
 
+.title-v5
+  font-family: "MazzardH-Light", sans-serif
+  font-size: 22px
+  font-weight: 300
+  line-height: 1.36
+  color: #9b1e23
+
 @import "../components/pages/main/style"
+@import "../components/pages/region/style"
+@import "../components/pages/pop/style"
+@import "../components/pages/articles/style"
+
+.mt-0
+  margin-top: 0
+.py-5
+  padding: 50px 0
+.pb-6
+  padding-bottom: 60px
 
 @import "media"
 // Всегда в конце
