--- a/sass/main.sass
+++ b/sass/main.sass
@@ -143,12 +143,13 @@ strong
   padding: 0 15px
 
 #wrapper-content
-  min-height: calc(100vh - 199px - 50px)
+  min-height: calc(100vh - 50px)
+  padding-top: 200px
 .header
   padding: 55px 0 45px
   box-shadow: 0 0 30px 0 rgba(176, 141, 81, 0.15)
   background-color: #ffffff
-  position: sticky
+  position: fixed
   top: 0
   left: 0
   width: 100%
